Modifying haproxy configuration structure

--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -38,19 +38,21 @@ defaults
   errorfile 504 /etc/haproxy/errors/504.http
 {% endif %}
 
-frontend {{ haproxy_frontend_name }}
-    bind {{ haproxy_frontend_bind_address }}:{{ haproxy_frontend_port }}
-    mode {{ haproxy_frontend_mode }}
-    default_backend {{ haproxy_backend_name }}
-
-backend {{ haproxy_backend_name }}
-    mode {{ haproxy_backend_mode }}
-    balance {{ haproxy_backend_balance_method }}
-    option forwardfor
-{% if haproxy_backend_httpchk != '' %}
-    option httpchk {{ haproxy_backend_httpchk }}
-{% endif %}
-    cookie SERVERID insert indirect
-{% for backend in haproxy_backend_servers %}
-    server {{ backend.name }} {{ backend.address }} cookie {{ backend.name }} check
+{% for frontend in haproxy_frontends %}
+frontend {{ frontend.name }}
+    bind {{ frontend.bind_address }}:{{ frontend.bind_port }}
+    mode {{ frontend.mode }}
+    {% for timeout in frontend.timeouts %}
+    timeout {{ timeout }}
+    {% endfor %}
+    {% for option in frontend.options %}
+    option {{ option }}
+    {% endfor %}
+    {% for param in frontend.additional_parameters %}
+    {{ param }}
+    {% endfor %}
+    balance {{ frontend.balance_method }}
+    {% for backend_node in frontend.backend_servers %}
+    server {{ backend_node.name }} {{ backend_node.address }} {{ backend_node.additional_parameters }}
+    {% endfor %}
 {% endfor %}
